remove refresh button

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -40,9 +40,7 @@
     <footer class="footer">
       <button type="button" class="collapsible">Auth</button>
       <div class="content">
-        <p>Access Token: {{user.access_token}}
-        <a href="/auth/refresh" class="btn btn-secondary">Refresh</a>
-        </p>
+        <p>Access Token: {{user.access_token}}</p>
       </div>
     </footer>
   </body>
